<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OpenContactView">

    <Button
        android:id="@+id/backBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border_bg"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        />
    <Button
        android:id="@+id/refactorBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/border_bg"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        />
    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/border_bg"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        />

    <ImageView
        android:id="@+id/personPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/tvPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="150dp"
        android:background="@drawable/border_bg"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tvPersonName"
        android:text="@string/name"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"/>
    <TextView
        android:id="@+id/tvPersonName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/contact_name"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/border_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="500dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tvPersonNumber"
        android:text="@string/contact_phonenumber"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"/>
    <TextView
        android:id="@+id/tvPersonNumber"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/contact_phonenumber"
        android:background="@drawable/border_bg"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPersonName" />
    <Button
        android:id="@+id/shareBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/border_bg"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>